--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -6,63 +6,15 @@
     tools:context="com.pccw.lizhihui.cmcc.view.activity.MainPageActivity">
 
 
-    <RadioGroup
-        android:id="@+id/bottom_radio_group"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/titbottom_bg"
-        android:gravity="center"
-        android:orientation="horizontal" >
 
-        <RadioButton
-            android:id="@+id/btn_0"
-            style="@style/main_page_radio_button_style"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:checked="true"
-            android:drawableTop="@drawable/main_home_select"
-            android:padding="5dp"
-            android:text="业务管理"
-            android:textColor="@drawable/text_color_select"
-            android:background="@drawable/main_home_btn_select"
-            android:textSize="14sp" />
 
-        <RadioButton
-            android:id="@+id/btn_2"
-            style="@style/main_page_radio_button_style"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableTop="@drawable/main_category_select"
-            android:padding="5dp"
-            android:text="个人资产管理"
-            android:textColor="@drawable/text_color_select"
-            android:background="@drawable/main_home_btn_select"
-            android:textSize="14sp" />
-
-        <RadioButton
-            android:id="@+id/btn_3"
-            style="@style/main_page_radio_button_style"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableTop="@drawable/main_mine_select"
-            android:padding="5dp"
-            android:text="个人中心"
-            android:textColor="@drawable/text_color_select"
-            android:background="@drawable/main_home_btn_select"
-            android:textSize="14sp" />
-    </RadioGroup>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/container_view_pager"
+    <FrameLayout
+        android:id="@+id/container_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottom_radio_group">
+        android:layout_above="@+id/bottom_radio_group">
 
-    </android.support.v4.view.ViewPager>
+    </FrameLayout>
 
 
 </RelativeLayout>
