implement login logic

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,136 +5,11 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context="com.pccw.lizhihui.cmcc.view.activity.LoginActivity">
-    <LinearLayout
-        android:id="@+id/edit_area_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:background="@drawable/login_edit"
-        android:orientation="vertical">
+   <FrameLayout
+       android:id="@+id/login_container"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="21dp"
-                android:background="@drawable/login_person_icon"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:background="@null"
-                android:hint="请输入用户名"
-                android:singleLine="true"
-                android:textColor="@color/black"
-                android:textSize="16sp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="21dp"
-                android:background="@drawable/login_pass_icon"/>
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:background="@null"
-                android:hint="请输入用户名"
-                android:singleLine="true"
-                android:textColor="@color/black"
-                android:textSize="16sp"/>
-        </LinearLayout>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/app_name_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="移动资产管理系统"
-        android:textSize="18dp"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@id/edit_area_layout"
-        android:layout_marginBottom="40dp"
-        android:textColor="@color/black"/>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/logo01"
-        android:layout_above="@id/app_name_text_view"
-        android:layout_marginBottom="10dp"/>
-
-
-    <LinearLayout
-        android:id="@+id/action_area_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/edit_area_layout"
-        android:orientation="vertical"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp" >
-
-        <Button
-            android:id="@+id/login_button"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/btn_login_selector"
-            android:text="@string/login_btn_lable"
-            android:textColor="#FFF"
-            android:textSize="16sp" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp" >
-
-            <TextView
-                android:id="@+id/reset_password_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:text="@string/reset_pass"
-                android:textSize="16sp" />
-            <!--  去掉离线登录功能 2015/12/11 LC修改
-
-            -->
-            <TextView
-                android:id="@+id/server_settting_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:text="@string/server_setting"
-                android:textSize="16sp" />
-
-        </RelativeLayout>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/copyright_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"
-        android:text="@string/mobile_copyright" />
+   </FrameLayout>
 
 </RelativeLayout>
