--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context="com.pccw.lizhihui.cmcc.view.activity.LoginActivity">
+   <include layout="@layout/toolbar"/>
+
    <FrameLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
