--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -5,11 +5,13 @@
     android:layout_height="match_parent"
     tools:context="com.pccw.lizhihui.cmcc.view.activity.MainPageActivity">
 
+    <include layout="@layout/toolbar"/>
+
     <FrameLayout
         android:id="@+id/container_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_radio_group">
+        android:layout_below="@+id/toolbar">
 
     </FrameLayout>
 
