--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="main_page_radio_button_style">
@@ -11,5 +12,6 @@
         <item name="android:gravity">center</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
+
 
 </resources>
