--- a/app/src/main/res/layout/pager_with_tabs.xml
+++ b/app/src/main/res/layout/pager_with_tabs.xml
@@ -24,7 +24,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.design.widget.TabLayout
-        android:layout_below="@id/toolbar"
+        android:layout_gravity="bottom"
         android:id="@+id/sliding_tabs_layout"
         app:tabIndicatorColor="@android:color/white"
         app:tabMode="scrollable"
@@ -37,7 +37,5 @@
         android:id="@+id/vp_pages"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-
 
 </android.support.design.widget.CoordinatorLayout>
