--- a/app/src/main/res/layout/pager_with_tabs.xml
+++ b/app/src/main/res/layout/pager_with_tabs.xml
@@ -23,19 +23,24 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.design.widget.TabLayout
-        android:layout_gravity="bottom"
-        android:id="@+id/sliding_tabs_layout"
-        app:tabIndicatorColor="@android:color/white"
-        app:tabMode="scrollable"
-        android:background="@color/primary"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/sliding_tabs_layout"
+            android:layout_alignParentBottom="true"
+            app:tabIndicatorColor="@android:color/white"
+            app:tabMode="scrollable"
+            android:background="@color/primary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <com.pccw.lizhihui.cmcc.view.ViewPager
+        <com.pccw.lizhihui.cmcc.view.ViewPager
+            android:id="@+id/vp_pages"
+            android:layout_above="@id/sliding_tabs_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
 
-        android:id="@+id/vp_pages"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 </android.support.design.widget.CoordinatorLayout>
