--- a/app/src/main/res/layout/pager_with_tabs.xml
+++ b/app/src/main/res/layout/pager_with_tabs.xml
@@ -13,13 +13,13 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/ToolbarTheme"
             android:layout_alignParentTop="true"
             android:minHeight="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:id="@+id/toolbar" />
+            android:background="?attr/colorPrimary" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -29,9 +29,11 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/sliding_tabs_layout"
             android:layout_alignParentBottom="true"
-            app:tabIndicatorColor="@android:color/white"
-            app:tabMode="scrollable"
-            android:background="@color/primary"
+            app:tabIndicatorHeight="0dp"
+            app:tabMode="fixed"
+            app:tabGravity="fill"
+            app:tabSelectedTextColor="@color/colorAccent"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
